refactor: separate filter and common response object and modify global exception handler